<resources>
    <string name="app_name">Wootmarket</string>
    <string name="hello_there_nwelcome_back">Hello there, \nWelcome Back</string>
    <string name="image_of_tractor">image of tractor</string>
    <string name="not_a_member_sign_up">Not a member sign Up</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Neque viverra justo nec ultrices. Pretium fusce id velit ut tortor pretium viverra suspendisse potenti. Orci sagittis eu volutpat odio facilisis
        mauris sit amet. Purus sit amet volutpat consequat mauris. Dolor sit amet consectetur adipiscing elit ut aliquam. Egestas maecenas pharetra
        convallis posuere morbi. Vulputate mi sit amet mauris. Justo nec ultrices dui sapien eget. Congue quisque egestas diam in arcu cursus euismod.
...
